--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -7,7 +7,15 @@
              xmlns:helpers="clr-namespace:TerminalMonitor.Windows.Helpers"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:ExecutionListViewDataContextVO}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="250" d:DesignWidth="200">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <x:Array x:Key="designExecutions" Type="local:ExecutionListItemVO">
+                <local:ExecutionListItemVO Name="Execution0" />
+                <local:ExecutionListItemVO Name="Execution1" />
+            </x:Array>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -16,7 +24,8 @@
         <ListView Name="lstExecutions" Grid.Row="0" MinHeight="30"
                   SelectionChanged="LstExecutions_SelectionChanged"
                   MouseDown="LstExecutions_MouseDown"
-                  helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True">
+                  helpers:MouseHorizontalWheelScroller.ScrollingEnabled="True"
+                  d:ItemsSource="{StaticResource designExecutions}">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Stop" Command="{Binding Path=StopCommand}">
