--- a/Windows/Controls/CommandListView.xaml
+++ b/Windows/Controls/CommandListView.xaml
@@ -30,15 +30,15 @@
                 <ContextMenu>
                     <MenuItem Header="Start" Command="{Binding Path=StartCommand}">
                         <MenuItem.Icon>
-                            <Viewbox Width="20" Height="20">
-                                <Label Content="▶" Foreground="Green" FontSize="48" />
+                            <Viewbox Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="▶" Foreground="Green" />
                             </Viewbox>
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Stop" Command="{Binding Path=StopCommand}">
                         <MenuItem.Icon>
                             <Viewbox Width="20" Height="20">
-                                <Label Content="■" Foreground="Red" FontSize="48" />
+                                <TextBlock Text="■" Foreground="Red" />
                             </Viewbox>
                         </MenuItem.Icon>
                     </MenuItem>
