--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -30,15 +30,15 @@
                 <ContextMenu>
                     <MenuItem Header="Stop" Command="{Binding Path=StopCommand}">
                         <MenuItem.Icon>
-                            <Viewbox Width="20" Height="20">
-                                <Label Content="■" Foreground="Red" FontSize="48" />
+                            <Viewbox Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="■" Foreground="Red" />
                             </Viewbox>
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Restart" Command="{Binding Path=RestartCommand}">
                         <MenuItem.Icon>
-                            <Viewbox Width="20" Height="20">
-                                <Label Content="↺" Foreground="Blue" FontSize="60" Padding="0,-30,0,0" />
+                            <Viewbox Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="↺" Foreground="Blue" />
                             </Viewbox>
                         </MenuItem.Icon>
                     </MenuItem>
