--- a/Windows/Controls/ConditionListView.xaml
+++ b/Windows/Controls/ConditionListView.xaml
@@ -53,6 +53,36 @@
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Edit" Icon="✏" Command="{Binding Path=EditCommand}" />
+                    <MenuItem Header="Toggle Inverted" Command="{Binding Path=ToggleInvertedCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="⛔" Foreground="Red" FontSize="8" TextAlignment="Center"
+                                           Width="14" Height="14" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                                <TextBlock Text="🛑" Foreground="Green" FontSize="8" TextAlignment="Center"
+                                           Width="14" Height="14" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Toggle Default Result" Command="{Binding Path=ToggleDefaultResultCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="★" Foreground="Gold" FontSize="16" TextAlignment="Center"
+                                           Width="18" Height="18" Margin="4,-2,0,2" />
+                                <TextBlock Text="☆" Foreground="Orange" FontSize="16" TextAlignment="Center"
+                                           Width="18" Height="18" Margin="0,-6,4,6" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Toggle Disabled" Command="{Binding Path=ToggleDisabledCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="⏸" Foreground="Red" FontSize="10" TextAlignment="Center"
+                                           Width="16" Height="16" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                                <TextBlock Text="⏺" Foreground="Green" FontSize="10" TextAlignment="Center"
+                                           Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <Separator />
                     <MenuItem Header="Cut" Icon="✂" Command="{Binding Path=CutCommand}" />
                     <MenuItem Header="Copy" Icon="📄" Command="{Binding Path=CopyCommand}" />
