--- a/Windows/Controls/ConditionListView.xaml
+++ b/Windows/Controls/ConditionListView.xaml
@@ -7,100 +7,15 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:ConditionListViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <x:Array x:Key="designConditions" Type="{x:Type local:ConditionItemVO}">
+                <local:ConditionItemVO FieldKey="key" MatchOperator="Equals" TargetValue="value0" IsInverted="False" DefaultResult="False" IsDisabled="False" />
+                <local:ConditionItemVO FieldKey="key" MatchOperator="Contains" TargetValue="value1" IsInverted="True" DefaultResult="True" IsDisabled="True" />
+            </x:Array>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
-        <Grid.Resources>
-            <ResourceDictionary>
-                <Style x:Key="checkBoxInvert" TargetType="CheckBox">
-                    <Setter Property="ToolTip" Value="Invert match result" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsInverted}" Value="False">
-                            <Setter Property="Content" Value="🛑" />
-                            <Setter Property="Foreground" Value="Green" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsInverted}" Value="True">
-                            <Setter Property="Content" Value="⛔" />
-                            <Setter Property="Foreground" Value="Red" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-
-                <Style x:Key="checkBoxDefault" TargetType="CheckBox">
-                    <Setter Property="ToolTip" Value="Match by Default" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding DefaultResult}" Value="False">
-                            <Setter Property="Content" Value="☆" />
-                            <Setter Property="Foreground" Value="Orange" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding DefaultResult}" Value="True">
-                            <Setter Property="Content" Value="★" />
-                            <Setter Property="Foreground" Value="Gold" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-                <Style x:Key="checkBoxDismiss" TargetType="CheckBox">
-                    <Setter Property="ToolTip" Value="Dismiss this condition in match" />
-                    <Setter Property="VerticalAlignment" Value="Center" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsDisabled}" Value="False">
-                            <Setter Property="Content" Value="⏺" />
-                            <Setter Property="Foreground" Value="Green" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsDisabled}" Value="True">
-                            <Setter Property="Content" Value="⏸" />
-                            <Setter Property="Foreground" Value="Red" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-
-                <Style x:Key="textInvert" TargetType="TextBlock">
-                    <Setter Property="ToolTip" Value="Invert match result" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsInverted}" Value="False">
-                            <Setter Property="Text" Value="🛑" />
-                            <Setter Property="Foreground" Value="Green" />
-                            <Setter Property="Visibility" Value="Collapsed" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsInverted}" Value="True">
-                            <Setter Property="Text" Value="⛔" />
-                            <Setter Property="Foreground" Value="Red" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-
-                <Style x:Key="textDefault" TargetType="TextBlock">
-                    <Setter Property="ToolTip" Value="Match by Default" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding DefaultResult}" Value="False">
-                            <Setter Property="Text" Value="☆" />
-                            <Setter Property="Foreground" Value="Orange" />
-                            <Setter Property="Visibility" Value="Collapsed" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding DefaultResult}" Value="True">
-                            <Setter Property="Text" Value="★" />
-                            <Setter Property="Foreground" Value="Gold" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-
-                <Style x:Key="textDismiss" TargetType="TextBlock">
-                    <Setter Property="ToolTip" Value="Dismiss this condition in match" />
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsDisabled}" Value="False">
-                            <Setter Property="Text" Value="⏺" />
-                            <Setter Property="Foreground" Value="Green" />
-                            <Setter Property="Visibility" Value="Collapsed" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsDisabled}" Value="True">
-                            <Setter Property="Text" Value="⏸" />
-                            <Setter Property="Foreground" Value="Red" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ResourceDictionary>
-        </Grid.Resources>
-        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -122,18 +37,52 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
-            <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
-            <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
-            <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
+            <CheckBox Name="chkBxNegative" Margin="2, 0" IsChecked="{Binding IsInverted}"
+                      Style="{StaticResource checkBoxInvert}" d:Style="{StaticResource checkBoxInvertDesign}" />
+            <CheckBox Name="chkBxDefault" Margin="2, 0" IsChecked="{Binding DefaultResult}"
+                      Style="{StaticResource checkBoxDefault}" d:Style="{StaticResource checkBoxDefaultDesign}" />
+            <CheckBox Name="chkBxDismiss" Margin="2, 0" IsChecked="{Binding IsDisabled}"
+                      Style="{StaticResource checkBoxDismiss}" d:Style="{StaticResource checkBoxDismissDesign}" />
 
         </StackPanel>
         
         <ListView Name="lstConditions" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="3" MinHeight="20"
                   SelectionChanged="LstConditions_SelectionChanged"
-                  MouseDown="LstConditions_MouseDown" MouseDoubleClick="LstConditions_MouseDoubleClick">
+                  MouseDown="LstConditions_MouseDown" MouseDoubleClick="LstConditions_MouseDoubleClick"
+                  d:ItemsSource="{StaticResource designConditions}">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Edit" Icon="✏" Command="{Binding Path=EditCommand}" />
+                    <MenuItem Header="Toggle Inverted" Command="{Binding Path=ToggleInvertedCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="⛔" Foreground="Red" FontSize="8" TextAlignment="Center"
+                                           Width="14" Height="14" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                                <TextBlock Text="🛑" Foreground="Green" FontSize="8" TextAlignment="Center"
+                                           Width="14" Height="14" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Toggle Default Result" Command="{Binding Path=ToggleDefaultResultCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="★" Foreground="Gold" FontSize="16" TextAlignment="Center"
+                                           Width="18" Height="18" Margin="4,-2,0,2" />
+                                <TextBlock Text="☆" Foreground="Orange" FontSize="16" TextAlignment="Center"
+                                           Width="18" Height="18" Margin="0,-6,4,6" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Toggle Disabled" Command="{Binding Path=ToggleDisabledCommnad}">
+                        <MenuItem.Icon>
+                            <Grid Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="⏸" Foreground="Red" FontSize="10" TextAlignment="Center"
+                                           Width="16" Height="16" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
+                                <TextBlock Text="⏺" Foreground="Green" FontSize="10" TextAlignment="Center"
+                                           Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                            </Grid>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <Separator />
                     <MenuItem Header="Cut" Icon="✂" Command="{Binding Path=CutCommand}" />
                     <MenuItem Header="Copy" Icon="📄" Command="{Binding Path=CopyCommand}" />
@@ -174,9 +123,9 @@
                             <TextBlock Text="{Binding FieldKey}" Margin="3" Style="{StaticResource textWhenNoName}" />
                             <TextBlock Text="{Binding MatchOperator, Converter={StaticResource MatchOperatorToStringConverter}}" Margin="3" Style="{StaticResource textWhenNoName}" />
                             <TextBlock Text="{Binding TargetValue}" Margin="3" Style="{StaticResource textWhenNoName}" />
-                            <TextBlock Margin="3" Style="{StaticResource textInvert}" />
-                            <TextBlock Margin="3" Style="{StaticResource textDefault}" />
-                            <TextBlock Margin="3" Style="{StaticResource textDismiss}" />
+                            <TextBlock Margin="3" Style="{StaticResource textBlockInvert}" />
+                            <TextBlock Margin="3,-3,3,-3" Style="{StaticResource textBlockDefault}" />
+                            <TextBlock Margin="3" Style="{StaticResource textBlockDismiss}" />
                         </StackPanel>
                     </Border>
                 </DataTemplate>
@@ -192,11 +141,16 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add" Command="{Binding Path=AddCommand}" />
-            <Button Name="btnRemove" Grid.Column="1" Width="20" Content="➖" ToolTip="Remove" Command="{Binding Path=RemoveCommand}" />
-            <Button Name="btnEdit" Grid.Column="2" Width="20" Content="✏" ToolTip="Edit" Command="{Binding Path=EditCommand}" />
-            <Button Name="btnMoveLeft" Grid.Column="3" Width="20" Content="←" ToolTip="Move Left" Command="{Binding Path=MoveLeftCommand}" />
-            <Button Name="btnMoveRight" Grid.Column="4" Width="20" Content="→" ToolTip="Move Right" Command="{Binding Path=MoveRightCommand}" />
+            <Button Name="btnAdd" Grid.Column="0" Width="24" Content="➕" ToolTip="Add" Command="{Binding Path=AddCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnRemove" Grid.Column="1" Width="24" Content="➖" ToolTip="Remove" Command="{Binding Path=RemoveCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnEdit" Grid.Column="2" Width="24" Content="✏" ToolTip="Edit" Command="{Binding Path=EditCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnMoveLeft" Grid.Column="3" Width="24" Content="←" ToolTip="Move Left" Command="{Binding Path=MoveLeftCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnMoveRight" Grid.Column="4" Width="24" Content="→" ToolTip="Move Right" Command="{Binding Path=MoveRightCommand}"
+                    Style="{StaticResource buttonIcon}" />
         </Grid>
     </Grid>
 </UserControl>
