--- a/Windows/Controls/FieldListView.xaml
+++ b/Windows/Controls/FieldListView.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=local:FieldListViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <x:Array x:Key="designFields" Type="{x:Type local:FieldListItemVO}">
+                <local:FieldListItemVO FieldKey="key0" />
+                <local:FieldListItemVO FieldKey="key1" HeaderName="Name1" />
+                <local:FieldListItemVO FieldKey="key2" Hidden="True" />
+            </x:Array>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -25,17 +34,23 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add" Command="{Binding Path=AddCommand}" />
-            <Button Name="btnRemove" Grid.Column="1" Width="20" Content="➖" ToolTip="Remove" Command="{Binding Path=RemoveCommand}" />
-            <Button Name="btnEdit" Grid.Column="2" Width="20" Content="✏" ToolTip="Edit" Command="{Binding Path=EditCommand}" />
-            <Button Name="btnMoveLeft" Grid.Column="3" Width="20" Content="←" ToolTip="Move Left" Command="{Binding Path=MoveLeftCommand}" />
-            <Button Name="btnMoveRight" Grid.Column="4" Width="20" Content="→" ToolTip="Move Right" Command="{Binding Path=MoveRightCommand}" />
+            <Button Name="btnAdd" Grid.Column="0" Width="24" Content="➕" ToolTip="Add" Command="{Binding Path=AddCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnRemove" Grid.Column="1" Width="24" Content="➖" ToolTip="Remove" Command="{Binding Path=RemoveCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnEdit" Grid.Column="2" Width="24" Content="✏" ToolTip="Edit" Command="{Binding Path=EditCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnMoveLeft" Grid.Column="3" Width="24" Content="←" ToolTip="Move Left" Command="{Binding Path=MoveLeftCommand}"
+                    Style="{StaticResource buttonIcon}" />
+            <Button Name="btnMoveRight" Grid.Column="4" Width="24" Content="→" ToolTip="Move Right" Command="{Binding Path=MoveRightCommand}"
+                    Style="{StaticResource buttonIcon}" />
         </Grid>
 
         <ListView Name="lstFields" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" MinHeight="25"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   SelectionChanged="LstFields_SelectionChanged"
-                  MouseDown="LstFields_MouseDown" MouseDoubleClick="LstFields_MouseDoubleClick">
+                  MouseDown="LstFields_MouseDown" MouseDoubleClick="LstFields_MouseDoubleClick"
+                  d:ItemsSource="{StaticResource designFields}">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Edit" Icon="✏" Command="{Binding Path=EditCommand}" />
